# Faithkv

./: .gitattributes  .gitignore  .gitmodules  CHANGELOG.md  CLAUDE.md  Makefile  PLAN.md  README.md  pyproject.toml  pytest.ini  requirements-lock.txt  requirements.txt
configs/: early_gap_b1024.yaml  early_gap_b256.yaml  early_gap_b512.yaml  early_gap_v2_b128.yaml  early_gap_v3_b128.yaml  lock.yaml  selected_operating_point.yaml.example  stage0_smoke.yaml  stage1a_measurability.yaml  stage1b_budget_1024.yaml  stage1b_budget_128.yaml  stage1b_budget_256.yaml  stage1b_budget_512.yaml  stage2_main.yaml
docs/: A3_SEARCH_LOG.md  B0_5_DISCOVERY_PROTOCOL.md  B0_5_FEASIBILITY_AUDIT.md  B0_5_PROTOCOL_REPAIR.md  B0_5_R2_1_FINAL_PROTOCOL.md  B0_5_R2_2_AUTHORITY_AND_IMPLEMENTATION.md  B0_5_R2_DENSE_CACHE_REPAIR.md  B0_5_SEARCH_LOG.md  B0_SEARCH_LOG.md  B1A_REPAIR_AND_B1B_CPU_INTEGRATION.md  B1B_R2_REAL_MODEL_BOUNDARY_AND_B2A_PREFLIGHT.md  B1B_R3_EXECUTABLE_STATE_CLOSURE.md  B1B_R4_1_FINAL_CLOSURE.md  B1B_R4_FINAL_B2A_CLOSURE.md  B1_EXECUTION_BOUNDARY_FINAL_CLOSURE.md  B1_FINAL_CPU_CLOSURE.md  B1_FINAL_EXECUTION_CALL_GRAPH.md  B1_FINAL_REPAIR_LEDGER.md  B1_INDEPENDENT_AUDIT_REPAIR.md  B1_TOKENIZER_ONLY_VALIDATION.json  B1_TOKENIZER_ONLY_VALIDATION_CLARIFICATION.md  B2A_ONE_EXAMPLE_GPU_AUTHORIZATION_2026-07-22.md  B2A_R1_FAILURE_AND_B2A_R2_PROTOCOL_2026-07-22.md  B2A_R2_FORENSIC_PAIR_RECORD_PERSISTENCE_2026-07-22.md  B2A_R2_RESULT_2026-07-22.md  B2A_R3_GPU_HOST_NEUTRAL_PREFLIGHT_TEST_REPAIR_2026-07-24.md  B2A_R3_PRODUCTION_SELECTED_ROW_FREEZER_AUDIT_REPAIR_2026-07-24.md  B2A_R3_PRODUCTION_SELECTED_ROW_FREEZER_AUDIT_REPAIR_AUTHORIZATION_2026-07-24.md  B2A_R3_PRODUCTION_SELECTED_ROW_FREEZER_IMPLEMENTATION_2026-07-24.md  B2A_R3_PRODUCTION_SELECTED_ROW_FREEZER_IMPLEMENTATION_AUTHORIZATION_2026-07-24.md  B2A_R3_PROTOCOL_AUDIT_REPAIR_2026-07-22.md  B2A_R3_RUNTIME_QUALIFIED_PROTOCOL_2026-07-22.md  B2A_R3_STAGE_A_PROTOCOL_ALIGNMENT_AMENDMENT_2026-07-23.md  B2A_R3_STAGE_B_BINDING_REPAIR_2026-07-23.md  B2A_R3_STAGE_B_QUALIFICATION_AUTHORIZATION_2026-07-23.md  (+20 more)
(+246 files in other folders)
